# UnifyCR

./: .buildinfo  .gitignore  .travis.yml  api-mount.html  api.html  assumptions.html  build-intercept.html  configure.ac  definitions.html  genindex.html  index.html  initialization.html  interception.html  objects.inv  overview.html  search.html  searchindex.js  start-stop.html  starting.html  stopping.html
_sources/: assumptions.rst.txt  index.rst.txt  interception.rst.txt  starting.rst.txt
_static/: theme_overrides.css
client/src/: Makefile.am  unifycr-stdio.c  unifycr-sysio.c
docs/: start-stop.rst
scripts/linux_kernel_checkpatch/: checkpatch.pl
t/: 0001-setup.t  0001-start-unifycrd.t  0002-stop-unifycrd.t  0100-sys-open.t  9005-unifycr-unmount.t  9010-stop-unifycrd.t  9020-mountpoint-empty.t  Makefile.am  README.md  sys_open.c  unifycr_unmount.c
t/lib/: testutil.c
t/libtap/: Makefile.am
t/sharness.d/: 01-env.sh  02-functions.sh
t/sys/: open.c
tests/: syscalls.t  unifycrd_start.sh
tests/sys/: Makefile.am  sys_access.c  sys_chdir.c  sys_chmod.c  sys_chown.c  sys_creat.c  sys_fexecve.c  sys_getdents.c  sys_getdents_race.c  sys_link.c  sys_listxattr.c  sys_lstat.c  sys_mkdir.c  sys_mkdirat.c  sys_mknod.c  sys_open.c  sys_readlink.c  sys_rename.c  sys_rmdir.c  sys_stat.c  sys_symlink.c  sys_truncate.c  sys_unlink.c
